Tweak font size to avoid wrapping Emil's name

--- a/html/assets/css/wiz.css
+++ b/html/assets/css/wiz.css
@@ -58,6 +58,7 @@ h2 {
 
 .jumbotron .ourteam h3 {
 	color: #f9a541;
+	font-size: 20px;
 	text-align: center;
 }
 
